traefik-ingress/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gerenciarhotel-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gerenciarhotel.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gerenciarhotel-service
            port:
              number: 80
